--- a/drivers/net/phy/Kconfig
+++ b/drivers/net/phy/Kconfig
@@ -99,6 +99,11 @@ config REALTEK_PHY
 	---help---
 	  Supports the Realtek 821x PHY.
 
+config MOTORCOMM_PHY
+	tristate "Motorcomm PHYs"
+	---help---
+	Supports the YT8010, YT8510, YT8511, YT8512 PHYs.
+
 config NATIONAL_PHY
 	tristate "Drivers for National Semiconductor PHYs"
 	---help---
